# Crash4WidescreenFix

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: HookInit.cpp  main.cpp  stdafx.h
